--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,10 @@
   margin: 0 auto;
   display: flex;
   height: 100%;
+  background-color: #E5E5E5;
+}
+
+.Content{
+  width: 100%;
+  height: 100%;
 }
