--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/sf-pro-display');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,14 +11,18 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: 'SF Pro Display', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
 }
 
-#root{
+#root {
   height: 100%;
+}
+
+.flex_center {
+  display: flex;
+  align-items: center;
 }
