--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
+  /* background-color: #F1F4F9; */
+}
+
+button{
+  font-family: 'SF Pro Display', sans-serif;
+  background-color: transparent;
+}
+
+ul, li {
+  list-style: none;
 }
 
 #root {
